# code-challenge-2024-theDRB123

./: .gitignore  README.md  SOLUTION.md  output.txt  run.sh  test.sh
.github/workflows/: classroom.yml
scripts/: Cargo.toml
scripts/src/: block_maker.rs  main.rs  serialization.rs  test_functions.rs  validation.rs  verifiers.rs
