[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
csv = "1.3.0"
sha2 = "0.11.0-pre.3"
hex = "0.4.3"
secp256k1 = "0.28.2"
ripemd = "0.1.3"
ecdsa = "0.17.0-pre.5"